# openai-rooms-pkg

./: CHANGELOG.md  README.md  pyproject.toml
docs/: README.md
src/docs/: README.md
src/openai_rooms_pkg/: __init__.py  addon.py
src/openai_rooms_pkg/actions/: __init__.py  audio_transcribe.py  audio_transcription.py  audio_tts.py  base.py  chat_complete.py  chat_completion.py  embedding_create.py  generate_text.py  image_generate.py  image_generation.py  vision_complete.py
src/openai_rooms_pkg/configuration/: __init__.py  addonconfig.py  baseconfig.py
src/openai_rooms_pkg/services/: __init__.py  credentials.py  openai_service.py
src/openai_rooms_pkg/tools/: base.py
src/openai_rooms_pkg/utils/: __init__.py  exceptions.py  validators.py
