[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openapi-rooms-pkg"
description = "OpenAI LLM addon package for AI rooms script"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "loguru>=0.6.0",
    "openai>=0.27.0",
    "pydantic>=2.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yourusername/openapi-rooms-pkg"
Repository = "https://github.com/yourusername/openapi-rooms-pkg"
Issues = "https://github.com/yourusername/openapi-rooms-pkg/issues"

[tool.setuptools.dynamic]
version = {attr = "openapi_rooms_pkg.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openapi_rooms_pkg = ["py.typed"]

[tool.semantic_release]
version_variable = "src/openapi_rooms_pkg/__init__.py:__version__"
build_command = "pip install build && python -m build"